    * Added new config option "local_address", to specify which local address
      outgoing connections (from munin-update) should be used.
    * Added "comparison" views, to view a whole hostgroup at once.
    * Bugfix in munin-limits.
    * Added new options notify_enable and notify_text, to allow more finely
      tuned notifications (both what to notify and what text to send.)

  - Munin-node:
    * Added module Munin::Plugin::SNMP, a Net::SNMP sublcass for plugins.
    * The node now changes dir to /, to make sure it's in a directory
      readable by all users.

  - Plugins
    * SNMP plugin "df" properly strips the label and serial number from
      Windows drive labels.
    * SNMP plugins now honour the "host" environment variable if they can't
      deduce the hostname from $0.
    * Use @@PERL@@ in all perl shebang lines.
    * Added new SNMP plugins for sensors, reading info from System-Informant on
      Windows boxes.
    * New wildcard plugin generic/ping_ to graph ping times.
    * Replace "rpc" field with "total" in NFS and NFSD plugins.
    * Added new plugin linux/apt_all, contributed by xavier.
    * Added new plugins generic/courier_mta*, contributed by Rune N.
      Skillingstad.
    * Plugin generic/acpi now autodetects even if the acpi version does not
      contain the acpi_available program.
    * Added plugin linux/irqstast, showing individual interrupt rates.
    * Fixed typo in linux/fw_forwarded_local (Deb#275535).
    * Fixed typo in linux/fw_packets (Deb#275537).
    * Added SNMP plugins for temperature and fan info provided by the
      Fujitsu Siemens ServerView agents.
    * Adapt linux/apt plugin to work properly with Debian testing/unstable
      (patch from Rune N. Skillingstad).
    * Added new plugin generic/apc_nis to monitor APC UPS, contributed by
      xavier.
    * Made graph_title a parameter for generic/exim_mailqueue (patch by Torstein
      T. Svendsen, SF#1060834).