@@ -15,6 +15,7 @@ munin (work)
     * Bugfix in munin-limits.
     * Added new options notify_enable and notify_text, to allow more finely
       tuned notifications (both what to notify and what text to send.)
+	* Draw min/max ranges in all graphs with only one visible field.
 
   - Munin-node:
     * Added module Munin::Plugin::SNMP, a Net::SNMP sublcass for plugins.
